# eigen_tensor

./: CMakeLists.txt  README.md
tensors/: CMakeLists.txt
tensors/include/tensors/: dense.hpp  kruskal.hpp
tensors/tests/: dense.cpp  kruskal.cpp
utils/: CMakeLists.txt
utils/include/utils/: eigen_helpers.hpp  khatrirao.hpp
utils/tests/: eigen_helpers.cpp  khatrirao.cpp
